--- a/onlineTutorial/templates/userplans.html
+++ b/onlineTutorial/templates/userplans.html
@@ -28,7 +28,7 @@
           <li class="list-group-item">Lectures Video/Notes</li>
           <li class="list-group-item">Validity 3 Days</li>
         </ul>
-        <a href="/finance/trynow/" class="btn btn-gradient mt-2">Try Now</a>
+        <a href="/finance/trynow/" class="btn btn-outline-success mt-2">Try Now</a>
       </div>
     </div>
   </div>
@@ -68,35 +68,11 @@
                 {% endif %}
               </ul>
               <br> 
-              <a href="/finance/user-plan/select-plan={{plan.id}}/" class="btn btn-gradient">Buy Now</a>
+              <a href="/finance/user-plan/select-plan={{plan.id}}/" class="btn btn-outline-success">Buy Now</a>
             </div>
           </div>
         </div>
     {% endfor %}
-        <!-- Table #1  -->
-        <!--  -->
-    
-        <!-- Table #1  -->
-        <!-- <div class="col-xs-12 col-lg-4">
-          <div class="card text-xs-center p-5">
-            <div class="card-header">
-              <h3 class="display-2"><span class="currency">₹</span>800<span class="period">/month</span></h3>
-            </div>
-            <div class="card-block">
-              <h4 class="card-title"> 
-                Premium Plan
-              </h4>
-              <ul class="list-group">
-                <li class="list-group-item">Lectures Video/Notes</li>
-                <li class="list-group-item">Ncert Solutions Videos</li>
-                <li class="list-group-item">HC Verma Solutions Videos</li>
-                <li class="list-group-item">Weekly 1 Mock Test</li>
-              </ul>
-              <a href="#" class="btn btn-gradient mt-2">Buy Now</a>
-            </div>
-          </div>
-        </div> -->
-    
       </div>
     </div>
 {% endblock %}
