--- a/onlineTutorial/templates/userplans.html
+++ b/onlineTutorial/templates/userplans.html
@@ -28,7 +28,7 @@
           <li class="list-group-item">Lectures Video/Notes</li>
           <li class="list-group-item">Validity 3 Days</li>
         </ul>
-        <a href="/finance/trynow/" class="btn btn-outline-success mt-2">Try Now</a>
+        <a href="/finance/trynow/" class="btn btn-success mt-2">Try Now</a>
       </div>
     </div>
   </div>
@@ -68,7 +68,7 @@
                 {% endif %}
               </ul>
               <br> 
-              <a href="/finance/user-plan/select-plan={{plan.id}}/" class="btn btn-outline-success">Buy Now</a>
+              <a href="/finance/user-plan/select-plan={{plan.id}}/" class="btn btn-success">Buy Now</a>
             </div>
           </div>
         </div>
