--- a/onlineTutorial/templates/index.html
+++ b/onlineTutorial/templates/index.html
@@ -64,7 +64,7 @@
     <p class="lead" style="color:black ;">{{obj.message}}</p>
     <p class="lead">
       {% if user.is_authenticated %}
-      <a href="/physics/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Start Learning</a>
+      <a href="/physics/jee/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Start Learning</a>
       {% else %}
       <a href="/accounts/register/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Register</a>
       {% endif %}
